tests/ui/fallible_fnptr.stderr
error: function pointer returning Result is not supported yet
 --> $DIR/tests/ui/fallible_fnptr.rs:4:24
  |
4 |         fn f(callback: fn() -> Result<()>);
  |                        ^^^^^^^^^^^^^^^^^^
