tests/ui/fallible_fnptr.rs
#[cxx::bridge]
mod ffi {
    extern "C++" {
        fn f(callback: fn() -> Result<()>);
    }
}

fn main() {}
